--- a/src/backend/web/templates/apidocs_overview.html
+++ b/src/backend/web/templates/apidocs_overview.html
@@ -32,7 +32,7 @@
       <h3>Need Help?</h3>
       <p>Here are some areas where you can ask the TBA developer community for assistance if you run into trouble.</p>
       <ul>
-        <li><strong>Have questions?</strong> Start a thread on the <a href="https://groups.google.com/forum/#!forum/thebluealliance-developers">developer mailing list</a> or the <a href="https://www.chiefdelphi.com">Chief Delphi forums</a> if you're having trouble using the APIs</li>
+        <li><strong>Have questions?</strong> Ask a question in our <a href="https://the-blue-alliance.slack.com/">Slack</a> or start a thread on the <a href="https://groups.google.com/forum/#!forum/thebluealliance-developers">developer mailing list</a> or the <a href="https://www.chiefdelphi.com">Chief Delphi forums</a> if you're having trouble using the APIs</li>
         <li><strong>Found a bug, or have a feature request?</strong> <a href="https://github.com/the-blue-alliance/the-blue-alliance/issues/new">File an issue on GitHub</a> if you think you've found a problem or would like to request a feature.</li>
         <li><strong>Contribute to The Blue Alliance!</strong> The Blue Alliance is built as an open source project by a group of volunteers. If you'd like to help us build awesome things, <a href="https://github.com/the-blue-alliance/the-blue-alliance">check out our code and send us a pull request!</a></li>
         <li><a href="/contact">Contact us</a> with any other questions or comments you may have.</li>
@@ -46,14 +46,23 @@
 
       <a href="/apidocs/v3"><h2 id="apiv3">Read API (v3)</h2></a>
       <p>Most people want to pull event listings, team information, match results, or statistics from The Blue Alliance to use in their own application. The read API is the way to do this. This API exposes almost all of the data you see on TBA to your application in a machine-readable format called JSON.</p>
-      <p>To get started using APIv3, you first need to generate an access token on your <a href="/account">Account Dashboard</a> in the Read API Keys section. This key needs to be passed along with each request you make in the header (or URL parameter) <code>X-TBA-Auth-Key</code>. If you are logged in to your TBA account, you can access the API without a key by simply navigating to an API URL in your web browser. All requests should be made to the base URL <code>https://www.thebluealliance.com/api/v3</code>.</p>
-      <p>To see complete details of data accessible via APIv3, please see the <a href="/apidocs/v3">APIv3 full documentation</a>.</p>
 
-      <h3>Last-Modified and If-Modified-Since Headers</h3>
-      <p>All API responses have a <code>Last-Modified</code> header, which indicates the date and time at which the data at a particular endpoint was last updated. When making repeated calls to a particular endpoint, you should set the <code>If-Modified-Since</code> header in your request to the value of <code>Last-Modified</code> from the previous call to that endpoint. On the first call, <code>If-Modified-Since</code> does not need to be set.</p>
+      <h3>API Endpoint</h3>
+      <p>All requests should be made to the base URL <code>https://www.thebluealliance.com/api/v3</code>.</p>
+
+      <h3>Authentication</h3>
+      <h4><code>X-TBA-Auth-Key</code> Header</h4>
+      <p>Generate an access token on your <a href="/account">Account Dashboard</a> in the Read API Keys section. This key needs to be passed along with each request you make in the header (or URL parameter) <code>X-TBA-Auth-Key</code>.</p>
+      <p>If you are logged in to your TBA account, you can access the API without a key by simply navigating to an API URL in your web browser</p>
+
+      <h3>Caching</h3>
+
+      <h4><code>ETag</code> and <code>If-None-Match</code> Headers</h4>
+      <p>All API responses have an <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/ETag"><code>ETag</code></a> header which specifies the version of the most recent response. When making repeated calls to a particular endpoint, you should set the <code>If-None-Match</code> header in your request to the <code>Etag</code> value from the previous call to that endpoint. On the first call, <code>If-None-Match</code> does not need to be set.</p>
       <p>Consumers of the TBA API are highly encouraged to make use of these headers. If the server determines that no data has been updated, it returns a <code>304 Not Modified</code> response with an empty body, saving both the server and the consumer time and bandwidth.</p>
+      <p>For more details, see <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/ETag">Mozilla's ETag reference</a>.</p>
 
-      <h3>Cache-Control Header</h3>
+      <h4><code>Cache-Control</code> Header</h4>
       <p>If your application makes many queries to the TBA API and you are capable of caching the results locally, the
       Cache-Control header will provide guidance on how long the API response can remain valid in a local cache. In
       particular, the <code>max-age</code> value in the <code>Cache-Control</code> header contains the number of
@@ -63,11 +72,6 @@
 
       <h3>Client Libraries</h3>
       <p>The Blue Alliance automatically builds and publishes client libraries to make it easier for you to get started using APIv3. The libraries are automatically generated  by <a href="http://swagger.io/swagger-codegen/">Swagger Codegen</a> and are not provided with any guarantee of support from The Blue Alliance and are not guaranteed to be complete implementations of the API. They are merely provided as a convenience to developers looking to get started and can be found <a href="https://github.com/TBA-API">on the TBA-API GitHub</a></p>
-
-      <a href="/apidocs/v2"><h2 id="apiv2">Read API (v2) - Deprecated</h2></a>
-      <p>The Blue Alliance also provides continued access to our version 2 read API. The v2 API is deprecated and will be shut down on January 1, 2018.</p>
-      <p>All API users are strongly encouraged to use the v3 API which provides more information than is available in our v2 API.</p>
-      <p><a href="/apidocs/v2">Legacy documentation on v2</a> is still available.</p>
 
       <a href="/apidocs/webhooks"><h2 id="webhooks">Webhooks</h2></a>
       <p>The TBA API also includes support for <a href="https://en.wikipedia.org/wiki/Webhook">webhooks</a>, or HTTP callbacks. When an item of interest changes, TBA can send a HTTP request to your server, allowing your application to react instantly to the change. This can save both your client and our server time and processing power, as it can reduce the need to poll the API. See <a href="/apidocs/webhooks">this page</a> for more documentation on webhooks.
