--- a/src/backend/web/templates/avatars.html
+++ b/src/backend/web/templates/avatars.html
@@ -8,7 +8,21 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 text-center">
-      <h1 class="end_header">{{year}} {% if year == 2018 %}<i>FIRST POWER UP</i>{% elif year == 2019 %}<i>DESTINATION: DEEP SPACE</i>{% elif year == 2020 %}<i>INFINITE RECHARGE</i>{% elif year == 2022 %}<i>RAPID REACT</i>{% endif %} Avatars</h1>
+      <h1 class="end_header">
+        <div class="dropdown" style="display: inline-block; vertical-align: middle;">
+          <button class="btn btn-default btn-lg dropdown-toggle" type="button" id="yearDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ year }}
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="yearDropdown">
+            {% for a_year in valid_years|reverse %}
+              <li><a href="/avatars/{{ a_year }}">{{ a_year }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+
+        <span style="vertical-align: middle">{% if year == 2018 %}<i>FIRST POWER UP</i>{% elif year == 2019 %}<i>DESTINATION: DEEP SPACE</i>{% elif year == 2020 %}<i>INFINITE RECHARGE</i>{% elif year == 2022 %}<i>RAPID REACT</i>{% endif %} Avatars</span>
+      </h1>
 
       <p>For more information about submitting avatars, please read the official FRC <a href="{% if year == 2018 %}https://www.firstinspires.org/robotics/frc/blog/team-avatar-submission-system{% elif year == 2019 %}https://www.firstinspires.org/robotics/frc/blog/2019-team-avatars-reprise{% elif year == 2020 %}https://www.firstinspires.org/robotics/frc/blog/2020-team-avatars{% elif year == 2022 %}https://www.firstinspires.org/robotics/frc/blog/2022-team-avatars-return-for-2022{% endif %}" target="_blank" rel="noopener noreferrer">blog post</a>.</p>
       <a id="color-switch" class="btn btn-md btn-default">
