--- a/src/backend/web/templates/avatars.html
+++ b/src/backend/web/templates/avatars.html
@@ -31,8 +31,8 @@
       <br><br>
 
       {% for avatar in avatars %}
-        <a href="/team/{{avatar.team_number}}/{{year}}" class="avatar-link">
-          <img class="team-avatar blue" src="{{avatar.avatar_image_source}}" rel="tooltip" title="Team {{avatar.team_number}}"/>
+        <a href="/team/{{avatar.references[0].id()[3:]}}/{{year}}" class="avatar-link">
+          <img class="team-avatar blue" src="{{avatar.avatar_image_source}}" rel="tooltip" title="Team {{avatar.references[0].id()[3:]}}"/>
         </a>
       {% endfor %}
     </div>
