--- a/src/backend/web/templates/admin/event_create.html
+++ b/src/backend/web/templates/admin/event_create.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}Create Event{% endblock %}
 
@@ -40,8 +40,8 @@
         <tr>
             <td>Event Type</td>
             <td><select name="event_type">
-                {% for type, name in event_types.iteritems %}
-                  <option value="{{ type }}">{{ name }}</option>
+                {% for type, name in event_types.items() %}
+                  <option value="{{ type.value }}">{{ name }}</option>
                 {% endfor %}
             </select></td>
         </tr>
@@ -79,6 +79,7 @@
         </tr>
     </table>
 
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span> Create Event</button>
     <a href="/admin/" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> Cancel Create</a>
 </form>
