--- a/src/backend/web/templates/admin/api_delete_auth.html
+++ b/src/backend/web/templates/admin/api_delete_auth.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}{{auth.description}} - Delete{% endblock %}
 
@@ -7,6 +7,7 @@
 <h1>Delete auth for: {{ auth.description }}?</h1>
 
 <form action="/admin/api_auth/delete/{{auth.key.id}}" method="post">
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <a href="/admin/api_auth/manage" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-ban-circle"></span> Cancel Delete</a>
 
     <button type="submit" class="btn btn-danger btn-small pull-right"><span class="glyphicon glyphicon-trash"></span> Delete Event</button>
