--- a/src/backend/web/templates/admin/api_manage_auth.html
+++ b/src/backend/web/templates/admin/api_manage_auth.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}API Auth Manage{% endblock %}
 
@@ -7,7 +7,7 @@
 <h1>Manage API Authentication</h1>
 
 <h2>Write API</h2>
-{% include "partials/api_write_table.html" %}
+{% include "admin/partials/api_write_table.html" %}
 
 <hr>
 
@@ -21,8 +21,8 @@
   {% for auth in admin_auths %}
   <tr>
     <td><a href="/admin/api_auth/edit/{{auth.key.id}}">{{ auth.description }}</a></td>
-    <td>{% if auth.owner %}<a href="/admin/user/{{ auth.owner.id }}">{{ auth.owner.id }} {% endif %}</a></td>
-    <td>{{auth.key.id}}</td>
+    <td>{% if auth.owner %}<a href="/admin/user/{{ auth.owner.id }}">{{ auth.owner.id() }} {% endif %}</a></td>
+    <td>{{auth.key.id()}}</td>
   </tr>
   {% endfor %}
 </table>
