--- a/src/backend/web/templates/admin/event_details.html
+++ b/src/backend/web/templates/admin/event_details.html
@@ -334,6 +334,7 @@
     </div>
 
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-floppy-disk"></span> Save</button>
+<input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 </form>
 
 
