--- a/src/backend/web/templates/admin/partials/api_write_table.html
+++ b/src/backend/web/templates/admin/partials/api_write_table.html
@@ -18,13 +18,13 @@
   {% for auth in write_auths %}
   <tr>
     <td><a href="/admin/api_auth/edit/{{auth.key.id}}">{{ auth.description }}</a></td>
-    <td>{% if auth.owner %}<a href="/admin/user/{{ auth.owner.id }}">{{ auth.owner.id }} {% endif %}</a></td>
+    <td>{% if auth.owner %}<a href="/admin/user/{{ auth.owner.id }}">{{ auth.owner.id() }} {% endif %}</a></td>
     <td>{% if auth.expiration %} {{ auth.expiration }} {% endif %}</td>
-    <td>{{auth.key.id}}</td>
+    <td>{{auth.key.id()}}</td>
     <td>{{auth.secret}}</td>
     <td>
       {% for event_key in auth.event_list %}
-        <a href="/admin/event/{{event_key.id}}">{{event_key.id}}</a>
+        <a href="/admin/event/{{event_key.id}}">{{event_key.id()}}</a>
       {% endfor %}
     </td>
     <td>{% if auth.can_edit_event_info %}<span class="glyphicon glyphicon-ok"><span>{% endif %}</td>
