--- a/src/backend/web/templates/playoff_partials/playoff_round_robin_6_team.html
+++ b/src/backend/web/templates/playoff_partials/playoff_round_robin_6_team.html
@@ -29,7 +29,7 @@
           <td>{% if playoff_advancement.sf_complete  and loop.index0 < 2 %}<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>{% endif %}</td>
         </tr>
       {% endfor %}
-    </tbody>,
+    </tbody>
   </table>
 {% endif %}
 
