--- a/src/backend/web/templates/admin/match_details.html
+++ b/src/backend/web/templates/admin/match_details.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}{{match.key_name}}{% endblock %}
 
@@ -10,12 +10,13 @@
     <a href="/match/{{match.key_name}}" class="btn btn-default"><span class="glyphicon glyphicon-eye-open"></span> View on TBA</a>
     <a href="/admin/match/edit/{{match.key_name}}" class="btn btn-primary"><span class="glyphicon glyphicon-edit"></span> Edit</a>
 </div>
-<br />
+
+<hr/>
 
 <table class="table table-striped table-hover">
     <tr>
         <td>Event</td>
-        <td><a href="/admin/event/{{match.event_key_name}}">{{ match.event.get.year }} {{ match.event.get.name }}</a></td>
+        <td><a href="/admin/event/{{ match.event.id() }}">{{ match.event.id() }}</a></td>
     </tr>
     <tr>
         <td>Match</td>
