--- a/src/backend/web/templates/admin/match_edit.html
+++ b/src/backend/web/templates/admin/match_edit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}Edit {{match.key_name}}{% endblock %}
 
@@ -54,12 +54,14 @@
         </tr>
         <tr>
             <td>TBA Videos</td>
-            <td><textarea class="form-control" type="text" name="tba_videos" rows="6" cols="60">[{% for video in match.tba_videos %}"{{video}}"{% if not forloop.last %},{% endif %}{% endfor %}]</textarea></td>
-        </tr>        <tr>
+            <td><textarea class="form-control" type="text" name="tba_videos" rows="6" cols="60">[{% for video in match.tba_videos %}"{{video}}"{% if not loop.last %},{% endif %}{% endfor %}]</textarea></td>
+        </tr>
+        <tr>
             <td>YouTube Videos</td>
-            <td><textarea class="form-control" type="text" name="youtube_videos" rows="6" cols="60">[{% for video in match.youtube_videos %}"{{video}}"{% if not forloop.last %},{% endif %}{% endfor %}]</textarea></td>
+            <td><textarea class="form-control" type="text" name="youtube_videos" rows="6" cols="60">[{% for video in match.youtube_videos %}"{{video}}"{% if not loop.last %},{% endif %}{% endfor %}]</textarea></td>
         </tr>
     </table>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 
     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span> Save Match</button>
     <a href="/admin/match/{{match.key_name}}" class="btn btn-default"><span class="glyphicon glyphicon-thumbs-down"></span> Cancel Edit</a>
