--- a/src/backend/web/templates/event_details.html
+++ b/src/backend/web/templates/event_details.html
@@ -166,8 +166,12 @@
           {% endif %}
 
           <h3>{% if event.year >= 2015 %}Playoff{% else %}Elimination{% endif %} Results</h3>
-          {% if event.playoff_type in double_elim_playoff_types %}
-            {{mtm.double_elim_table(double_elim_matches, playlist=elim_playlist)}}
+          {% if event.playoff_type == 5 %}
+            <!-- PlayoffType.LEGACY_DOUBLE_ELIM_8_TEAM -->
+            {{mtm.legacy_double_elim_table(double_elim_matches, double_elim_rounds, playlist=elim_playlist)}}
+          {% elif event.playoff_type == 10 %}
+            <!-- PlayoffType.DOUBLE_ELIM_8_TEAM -->
+            {{mtm.double_elim_table(double_elim_matches, double_elim_rounds, playlist=elim_playlist)}}
           {% else %}
             {{mtm.elim_match_table(matches, playlist=elim_playlist)}}
           {% endif %}
@@ -195,12 +199,14 @@
           {% include "event_partials/event_alliances_table.html" %}
 
           {% if matches.qf or matches.sf or matches.f %}
-            {% if playoff_advancement %}
-              <h3>Playoff Advancement</h3>
-              {% include "playoff_partials/{}.html".format(playoff_template) %}
-            {% else %}
-              <h3>{% if event.year >= 2015 %}Playoff{% else %}Elimination{% endif %} Bracket</h3>
-              {% include "bracket_partials/bracket_table.html" %}
+            {% if event.playoff_type not in double_elim_playoff_types and (matches.qf or matches.sf or matches.f) %}
+              {% if playoff_advancement %}
+                <h3>Playoff Advancement</h3>
+                {% include "playoff_partials/{}.html".format(playoff_template) %}
+              {% else %}
+                <h3>{% if event.year >= 2015 %}Playoff{% else %}Elimination{% endif %} Bracket</h3>
+                {% include "bracket_partials/bracket_table.html" %}
+              {% endif %}
             {% endif %}
           {% endif %}
         </div>
