Store Display Name on Match Object

--- a/src/backend/web/templates/admin/match_details.html
+++ b/src/backend/web/templates/admin/match_details.html
@@ -31,6 +31,10 @@
         <td>{{ match.team_key_names }}</td>
     </tr>
     <tr>
+        <td>Display Name</td>
+        <td>{{ match.display_name }}</td>
+    </tr>
+    <tr>
         <td>Alliances JSON</td>
         <td>{{ match.alliances_json }}</td>
     </tr>
