--- a/src/backend/web/static/css/less_css/tba_style.main.less
+++ b/src/backend/web/static/css/less_css/tba_style.main.less
@@ -16,6 +16,7 @@
 @import "less/tba/tba_about.less";
 @import "less/tba/tba_blue_banners.less";
 @import "less/tba/tba_bracket_table.less";
+@import "less/tba/tba_double_elim_bracket_table.less";
 @import "less/tba/tba_event_page.less";
 @import "less/tba/tba_event_table.less";
 @import "less/tba/tba_facebook.less";
