update double elim bracket

--- a/src/backend/web/static/css/less_css/less/tba/tba_double_elim_bracket_table.less
+++ b/src/backend/web/static/css/less_css/less/tba/tba_double_elim_bracket_table.less
@@ -67,6 +67,14 @@
 
   .match-table {
     margin-bottom: 0px;
+
+    .alliance-name {
+      border-bottom: 1px dotted #777
+    }
+
+    .tooltip-inner {
+      width: 140px
+    }
   }
 
   .gap-row {
