--- a/src/backend/web/templates/admin/team_media_mod_list.html
+++ b/src/backend/web/templates/admin/team_media_mod_list.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}Admin Mod Keys{% endblock %}
 
@@ -29,7 +29,7 @@ $("#go_button").click(function() {
 
 <ul class="pagination pagination-small">
     {% for page_label in page_labels %}
-    <li{% if forloop.counter0 == page_num %} class="active"{% endif %}><a href="/admin/media/modcodes/list/{{year}}{% if not forloop.first %}/{{forloop.counter0}}{% endif %}">{{page_label}}</a></li>
+    <li{% if loop.index0 == page_num %} class="active"{% endif %}><a href="/admin/media/modcodes/list/{{year}}{% if not loop.first %}/{{loop.index0}}{% endif %}">{{page_label}}</a></li>
     {% endfor %}
 </ul>
 
@@ -46,7 +46,7 @@ $("#go_button").click(function() {
         <td><a href="/admin/team/{{auth_code.team_number}}">{{ auth_code.team_number }}</a></td>
         <td><a href="/admin/media/modcodes/edit/{{auth_code.team_number}}/{{auth_code.year}}">{{ auth_code.access_code }}</a></td>
         <td>{{ auth_code.account }}</td>
-        <td>{{ auth_code.expiration|date:"Y-m-d" }}</td>
+        <td>{{ auth_code.expiration|strftime("%Y-%m-%d")}}</td>
     </tr>
     {% endfor %}
 </table>
